# full-stack-rust-example

./: README.md
backend/: Cargo.toml  Shuttle.toml
backend/src/: main.rs
backend/src/routes/: api.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  routes.tsx  theme.ts
frontend/src/components/: home.tsx
