[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
tera = "1"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
dotenv = "0.15.0"
shuttle-runtime = "0.52.0"
shuttle-actix-web = "0.52.0"
reqwest = { version = "0.12.12", features = ["json"] }
gemini-rs = "0.4.2"
